# pipeline_etl

./: .env.dev  .env.prd  .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: backlog.md  index.md  planejamento_do_projeto.md
src/: db.py  funcao_teste.py  main.py  models.py  schemas.py  utils.py
tests/: test_connect_db.py  test_funcao_teste.py
